--- a/src/static/css/my-own.css
+++ b/src/static/css/my-own.css
@@ -5,21 +5,101 @@ body {
     background-position: center;
 }
 
+.alert-danger {
+	color: #fff !important;
+	background-color: #ff0017 !important;
+	border-color: #f40a23 !important;
+}
 
-input {
-    /**background: #fff !important;**/
-    font-family: "PT Sans", sans-serif;
-    border-radius: 0px !important;
+.alert-success {
+	color: #fcfffd !important;
+	background-color: #08bb33 !important;
+	border-color: #03b62c !important;
+}
+
+.btn:focus, .btn:active {
+    outline: none !important;
+    box-shadow: none !important;
+  }
+
+.form-control:focus {
+    border-color: rgba(126, 239, 104, 0.8);
+    box-shadow: 0 1px 1px #4b93550c inset, 0 0 8px #4b935573;
+    outline: 0 none;
+} 
+
+#login .form-control:focus {
+    border-color: rgba(0, 0, 0, 0);
+    box-shadow: 0 0px 0px #4b935500 inset, 0 0 0px #4b935500;
+    outline: 0 none;
+} 
+
+textarea:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus,
+.uneditable-input:focus {   
+  border-color: rgba(126, 239, 104, 0.8);
+  box-shadow: 0 1px 1px #4b93550c inset, 0 0 8px #4b935573;
+  outline: 0 none;
+}
+
+#login textarea:focus,
+#login input[type="text"]:focus,
+#login input[type="password"]:focus,
+#login input[type="datetime"]:focus,
+#login input[type="datetime-local"]:focus,
+#login input[type="date"]:focus,
+#login input[type="month"]:focus,
+#login input[type="time"]:focus,
+#login input[type="week"]:focus,
+#login input[type="number"]:focus,
+#login input[type="email"]:focus,
+#login input[type="url"]:focus,
+#login input[type="search"]:focus,
+#login input[type="tel"]:focus,
+#login input[type="color"]:focus,
+#login .uneditable-input:focus {   
+  border-color: rgba(0, 0, 0, 0);
+  box-shadow: 0 1px 1px #4b935500 inset, 0 0 8px #4b935500;
+  outline: 0 none;
+}
+
+
+#popperr .popper-box {
+	padding: 10px;
+	display: grid;
+	background: #f1f1f1;
+	color: #222;
+	border-radius: 5px;
+	width: 100%;
+	height: 50px;
+	text-transform: uppercase;
+	font-size: .9rem;
+	align-items: center;
+	/* text-align: center; */
+	margin: 5px 0 5px 0;
+	border: none;
 }
 
 .form-control::placeholder {
-    font-family: "PT Sans", sans-serif !important;
-	color: #6c757d;
+	color: #393c3f;
 	opacity: 1;
 }
 
 
-.card,
+#change .card,
 .card-header {
     font-family: "PT Sans", sans-serif;
     background-color: transparent !important;
@@ -28,7 +108,7 @@ input {
     margin-bottom: 20px;
 }
 
-.card {
+#change.card {
     box-shadow: 0 2px 20px 0 rgba(110, 130, 208, .18);
 }
 
@@ -41,11 +121,6 @@ input {
     text-decoration: none !important;
 }
 
-.card-body {
-    background: #f4f4f4;
-    color: #111;
-    font-size: 15px;
-}
 
 .btn-link::after {
     content: '\2212';
@@ -93,6 +168,10 @@ input {
     font-weight: 400;
 }
 
+#faq .card{
+    border: 1px solid #333;
+}
+
 
 #faq .pic {
     border-radius: 50px;
@@ -109,7 +188,416 @@ input {
     background-image: url(../images/body.svg) !important;
 }
 
+/**i dont even know**/
 
+.donate-image{
+    background-image: url(../images/donate.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+#donate .card {
+    background: #fff;
+    border: none;
+	/* color: #111; */
+	/* font-size: 15px; */
+	border-radius: 10px;
+    /* box-shadow: aqua; */
+    -webkit-box-shadow: 10px 10px 77px -32px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 77px -32px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 77px -32px rgba(0,0,0,0.75);
+}
+
+#donate h1, #donate p{
+    color: #222;
+}
+
+#register-form 
+    p {
+        margin-bottom: 3px;
+    }
+
+#register {
+    background: #f1f1f1;
+}
+
+.avatar {
+    width: 100px;
+}
+
+#register h1{
+    color: #222;
+}
+
+#register .breadcrumb {
+	background-color: #fff0 !important;
+	border: .1px solid #fff !important;
+}
+
+#login .breadcrumb {
+	background-color: #fff0 !important;
+	border: .1px solid #fff !important;
+}
+
+#register .btn{
+    padding: 10px;
+	display: block;
+	width: 100%;
+	height: 50px;
+	border-radius: 5px;
+	outline: none;
+	border: none;
+	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-size: 200%;
+	font-size: 1rem;
+	color: #fff;
+	text-transform: uppercase;
+	margin: 1rem 0;
+	cursor: pointer;
+	transition: .5s;
+}
+#register .btn:hover{
+	background-position: right;
+}
+
+#register .custom-file-label {
+	/* position: absolute; */
+	/* top: 0; */
+	/* right: 0; */
+	/* left: 0; */
+	/* z-index: 1; */
+	/* height: calc(1.5em + .75rem + 2px); */
+	/* padding: .375rem .75rem; */
+	/* font-weight: 400; */
+	/* line-height: 1.5; */
+	/* color: #495057; */
+	/* background-color: #fff; */
+	/* border: 1px solid #ced4da; */
+	/* border-radius: .25rem; */
+    margin-left: 9px;
+    margin-top: 20px;
+	/* padding: 10px; */
+}
+
+/**register end**/
+
+/**login**/
+
+
+#login .wave{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	height: 100%;
+	z-index: -1;
+}
+
+
+
+#login .card {
+    background: #fff;
+    border: none;
+	/* color: #111; */
+	/* font-size: 15px; */
+	border-radius: 10px;
+    /* box-shadow: aqua; */
+    -webkit-box-shadow: 10px 10px 77px -32px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 77px -32px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 77px -32px rgba(0,0,0,0.75);
+}
+
+#login .container{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap :7rem;
+   
+}
+
+#login .img{
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+/**DONATE START**/
+
+#secured {
+    font-family: "Montserrat";
+}
+
+#donate .img{
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+#donate .btn{
+	display: block;
+	width: 100%;
+	height: 50px;
+	border-radius: 5px;
+	outline: none;
+	border: none;
+	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-size: 200%;
+	font-size: 1.2rem;
+	color: #fff;
+	text-transform: uppercase;
+	margin: 1rem 0;
+	cursor: pointer;
+	transition: .5s;
+}
+#donate .btn:hover{
+	background-position: right;
+}
+
+/**donateend**/
+
+#login .login-content{
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	text-align: center;
+}
+
+#login .img img{
+	width: 500px;
+}
+
+#donate .img img{
+	width: 500px;
+}
+
+#login form{
+	width: 360px;
+}
+
+#login .login-content img{
+    height: 100px;
+}
+
+#login .login-content h2{
+	margin: 15px 0;
+	color: #333;
+	text-transform: uppercase;
+	font-size: 2.9rem;
+}
+
+#login .login-content .input-div{
+	position: relative;
+    display: grid;
+    grid-template-columns: 7% 93%;
+    margin: 25px 0;
+    padding: 5px 0;
+    border-bottom: 2px solid #d9d9d9;
+}
+
+#login .login-content .input-div.one{
+	margin-top: 0;
+}
+
+#login .i{
+	color: #d9d9d9;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#login .i i{
+	transition: .3s;
+}
+
+#login .input-div > div{
+    position: relative;
+	height: 45px;
+}
+
+#login .input-div > div > h5{
+	position: absolute;
+	left: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	color: #999;
+	font-size: 18px;
+	transition: .3s;
+}
+
+#login .input-div:before, .input-div:after{
+	content: '';
+	position: absolute;
+	bottom: -2px;
+	width: 0%;
+	height: 2px;
+	background-color: #38d39f;
+	transition: .4s;
+}
+
+#login .input-div:before{
+	right: 50%;
+}
+
+#login .input-div:after{
+	left: 50%;
+}
+
+#login .input-div.focus:before, .input-div.focus:after{
+	width: 50%;
+}
+
+#login .input-div.focus > div > h5{
+	top: -5px;
+	font-size: 15px;
+}
+
+#login .input-div.focus > .i > i{
+	color: #38d39f;
+}
+
+#login .input-div > div > input{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	border: none;
+	outline: none;
+	background: none;
+	padding: 0.5rem 0.7rem;
+	font-size: 1.2rem;
+	color: #555;
+	font-family: 'poppins', sans-serif;
+}
+
+#login .input-div.pass{
+	margin-bottom: 4px;
+}
+
+#login a{
+	display: block;
+	text-align: right;
+	text-decoration: none;
+	color: #999;
+	font-size: 0.9rem;
+	transition: .3s;
+}
+
+#login a:hover{
+	color: #38d39f;
+}
+
+#login .btn{
+	display: block;
+	width: 100%;
+	height: 50px;
+	border-radius: 5px;
+	outline: none;
+	border: none;
+	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-size: 200%;
+	font-size: 1.2rem;
+	color: #fff;
+	text-transform: uppercase;
+	margin: 1rem 0;
+	cursor: pointer;
+	transition: .5s;
+}
+#login .btn:hover{
+	background-position: right;
+}
+
+.custom-file {
+	/* position: relative; */
+	/* display: inline-block; */
+	/* width: 100%; */
+	/* height: calc(1.5em + .75rem + 2px); */
+	margin-top: 11px !important;
+	/* border-radius: 0px; */
+}
+
+.custom-file-label.rounded-pill {
+    border-radius: 50rem;
+  }
+  
+  .custom-file-label.rounded-pill::after {
+    border-radius: 0 50rem 50rem 0;
+  }
+
+.form-check-label {
+	margin-bottom: 0;
+	color: #000;
+	font-size: 15px;
+	margin-left: 10px;
+	font-weight: 200;
+	font-family: 'Poppins', sans-serif;
+}
+
+
+@media screen and (max-width: 1050px){
+	#login .container{
+		grid-gap: 5rem;
+	}
+}
+
+@media screen and (max-width: 1000px){
+	#login form{
+		width: 290px;
+	}
+
+	#login .login-content h2{
+        font-size: 2.4rem;
+        margin: 8px 0;
+	}
+
+	#login .img img{
+		width: 400px;
+	}
+}
+
+@media screen and (max-width: 900px){
+	#login .container{
+		grid-template-columns: 1fr;
+    }
+    
+    /**like i said ealier i dont even know**/
+    .register-body, .login-body, .donate-body{
+        background-color: #fff;
+    }
+
+	#login .img{
+		display: none;
+    }
+    
+    #donate .img{
+		display: none;
+	}
+
+	#login .wave{
+		display: none;
+	}
+
+	#login .login-content{
+		justify-content: center;
+    }
+    
+    #login{
+        background-color: #fff !important;
+    }
+    
+    #login .card {
+        -webkit-box-shadow: none !important;
+        -moz-box-shadow: none !important;
+        box-shadow: none !important;
+    }
+
+    #donate .card {
+        -webkit-box-shadow: none !important;
+        -moz-box-shadow: none !important;
+        box-shadow: none !important;
+    }
+}
+/**endlogin**/
 
 #sponsors {
     font-family: "PT Sans", sans-serif;
@@ -119,10 +607,27 @@ input {
 
 #sponsors h1 {
     font-weight: 500;
-    font-size: 30px;
-    letter-spacing: 2px;
+   
     text-align: center;
     color: #4b9e55;
+}
+
+
+.bb{
+    margin-top: 110px !important;
+}
+
+#flash_message a {
+	 display: contents;
+	 text-align: none;
+	 text-decoration: none;
+	 color: #32be8f;
+	 font-size: none;
+	 transition: none;
+}
+
+.humm{
+    margin-left: 100px;
 }
 
 .social-media{
@@ -130,20 +635,20 @@ input {
     justify-content: center;
 }
 
-#sponsors a{
-    background-attachment: fixed;
-    display: flex;
-    height: 75px;
-    width: 75px;
-    margin: 0 15px;
-    border-radius: 8px;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    box-shadow: 6px 6px 10px -1px rgba(0,0,0,0.15),
-                -6px -6px 10px -1px rgba(255,255,255,0.7);
-    transition: transform 0.5s;
+#sponsors a {
+	background-attachment: fixed;
+	display: flex;
+	height: 75px;
+	width: 75px;
+	margin: 0 15px;
+	border-radius: 8px;
+	align-items: center;
+	justify-content: center;
+	text-decoration: none;
+	box-shadow: 6px 6px 10px -1px rgba(0,0,0,0.15), -6px -6px 10px -1px #e3edf7;
+	transition: transform 0.5s;
 }
+
 
 #sponsors a:hover{
     box-shadow: inset 4px 4px 6px -1px rgba(0,0,0,0.2),
@@ -196,43 +701,6 @@ input {
 
 #take-below {
     background-color: rgba(0, 0, 0, 0.51);
-}
-
-
-#register {
-    padding: 10px;
-    background-color: #4b9e55;
-}
-
-#register .container {
-    border-radius: 10px;
-    font-family: "PT Sans", sans-serif;
-    background-image: url(../images/body.svg) !important;
-    background-size: cover;
-}
-
-#register input, #donate-popup input {
-    border: 1px solid #999;
-    border-radius: 2px;
-    background: #fff;
-}
-
-#register .btn-primary .btn-primary, #donate-popup .btn-primary {
-    background-color: #4b9e55 !important;
-    border-radius: 3px;
-    color: #fff;
-    border-color: #4b9e55 !important;
-}
-
-#register .btn:focus,
-.btn:active, #donate-popup .btn:focus,
-.btn:active {
-    outline: none !important;
-    box-shadow: none;
-}
-
-#register h3 {
-    margin-bottom: 55px;
 }
 
 .btn-donate {
@@ -400,6 +868,40 @@ text-decoration: none;
 @media only screen and (max-width: 700px) {
     .ms-btn-container, .msp-cn-1-3, .msp-cn-1-2, .msp-cn-1-1, .msp-cn-1-5, .msp-cn-1-9{
         left: 10px !important;
+    }
+
+    #register .custom-file-label {
+        margin-top: 0;
+        margin-left: 5px;
+        margin-right: 5px;
+        padding-bottom: 10px;
+    }
+
+    #form-group-fix{
+        margin-top: 1rem;
+    }
+
+    #register .login-container {
+        background-color: #fff;
+        border-radius: 0px;
+        display: -moz-grid-group;
+        align-items: center;
+    }
+
+    #sponsors a {
+        margin-top: 20px;
+    }
+
+    #register {
+        background: #fff;
+    }
+
+    .humm {
+        margin-left: 0 !important;
+    }
+
+    .man {
+        display: none;
     }
 
     .donatelink{
@@ -587,20 +1089,6 @@ text-decoration: none;
     color: #fff;
 }
 
-.donate-form {
-    font-family: "PT Sans", sans-serif;
-    background: #fff;
-}
-
-#donate {
-    background: #fff;
-    font-family: "PT Sans", sans-serif !important;
-}
-
-#donate input {
-    background: #f4f4f4 !important;
-    border: 1px solid #ced4da !important;
-}
 
 .personnel-author-image img {
 	width: 220px !important;
