--- a/src/static/css/style-custom.css
+++ b/src/static/css/style-custom.css
@@ -851,7 +851,7 @@ body .flex-direction-nav a:hover,
     color: #6d6d6d;
 }
 
-input[type="text"],
+/**input[type="text"],
 input[type="email"],
 input[type="password"],
 textarea {
@@ -863,7 +863,7 @@ input[type="email"],
 input[type="password"],
 textarea {
     color: #797979;
-}
+}**/
 
 input::input-placeholder {
     color: #797979;
