--- a/src/templates/donate.html
+++ b/src/templates/donate.html
@@ -1,144 +1,179 @@
-{% from "base.html" import render_aboutus, render_ourcauses, render_faq, render_contactus, render_ourteam, render_sponsors, render_subscribenews, render_takeaction, render_footer, render_js, render_form, render_navbar, render_css, render_donatemodal %}
+{% from "base.html" import render_scrolltotop, render_aboutus, render_ourcauses, render_faq, render_contactus, render_ourteam, render_sponsors, render_subscribenews, render_takeaction, render_footer, render_js, render_register, render_formseed, render_navbar, render_css, render_donatemodal %}
+
 <!DOCTYPE html>
-<html lang="en-us">
+<html>
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0" />
 
+    {% if title %}
+    <title>Register - {{ title }}</title>
+    {% else %}
     <title>Donate</title>
+    {% endif %}
+
+        <!--paystack function-->
+
 
     {{ render_css(render) }}
 </head>
 
+
+
 <body class="donate-body">
-
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand">DONATE</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto">
-              <a class="nav-item nav-link active" href="index.html">Home</a>
-              <a class="nav-item nav-link active" href="#contact-us">Contact Us</a>
-
-              <li class="nav-item dropdown dropleft">
-                <a class="nav-link dropdown-toggle active" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Register
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="registerfarmer.html">As a Farmer</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="registerseed.html">As a Seed Deliverer</a>
-                </div>
-              </li>             
-            </div>
-          </div>
-      </nav>
-
+    <!--Donation Form-->
     <section id="donate">
-                        <!-- Sidebar With Content Section-->
-                        <div class="with-sidebar-wrapper pb-5">
-                            <section id="content-section-1">
-                                <div class="greennature-parallax-wrapper greennature-background-image gdlr-show-all greennature-skin-dark-skin" id="greennature-parallax-wrapper-1" data-bgspeed="0" style="background-image: url({{ url_for('static', filename='images/help.jpg')}}); background-size: cover; background-position: center; padding-top: 260px; padding-bottom: 140px; ">
-                                    <div class="container">
-                                        <div class="greennature-title-item">
-                                            <div class="greennature-item-title-wrapper greennature-item  greennature-center greennature-extra-large ">
-                                                <div class="greennature-item-title-container container">
-                                                    <div class="greennature-item-title-head">
-                                                        <h3 class="greennature-item-title greennature-skin-title greennature-skin-border">DONATION</h3>
-                                                        <div class="greennature-item-title-caption greennature-skin-info">your DONATIONS and PARTICIPATIONS means a lot to us...</div>
-                                                        <div class="clear"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="clear"></div>
-                                        <div class="clear"></div>
-                                    </div>
-                                </div>
-                                <div class="clear"></div>
-                            </section>
-        
-                        </div>
-                        <!-- Below Sidebar Section-->
-
-        <div class="container p-3 donate-form">
-            <form method="POST" class="form-donate">
-                <div class="row">
-
-                    <div class="col-md-6">
-                        <br>
-                        <h3>You are donating to Donate A Seed</h3>
-                        <p>Your help means a lot to us...</p>
+        <div class="container">
+            <div class="container h-100 p-5">
+                <div class="row align-items-center text-center h-100">
+                    <div class="mx-auto">
+                        <div class="col p-3">
+                                <img class="avatar" src="../static/images/donation-hand.svg">
+                            <h1>DONATE</h1>
+                            <p>Help us End Hunger and make this world a better place. </p>
+                       </div>
                     </div>
+                </div>
+            </div>
+   
+           <div class="container col">
+               <div class="row">
+                   <div class="col-md"></div>
+                   <div class="col-md">
+                    <div class="col-md mb-0">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                              <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                              <li class="breadcrumb-item" aria-current="page"><a href="register.html">Register</a></li>
+                              <li class="breadcrumb-item" aria-current="page"><a href="login.html">Login</a></li>
+                            </ol>
+                          </nav>
+                       </div>
+                   </div>
+               </div>
+              
 
-                    <div class="col-md-6">
-                        <h5>How much would like to Donate</h5>
+               <div class="row">
+                   <div class="col-md">
+                       <div class="img">
+			<img src="../static/images/pay.svg">
+		</div>
+                   </div>
 
-                        <div class="col pb-2">
-                          <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
-                            <label class="custom-control-label" for="customRadioInline1">#1000</label>
-                          </div>
 
-                          <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
-                            <label class="custom-control-label" for="customRadioInline2">#20,000</label>
-                          </div>
+                   <div class="col-md">
+                    <div class="card p-5 mb-5">
+                        <form id="register-form" method="POST" action="{{ url_for('main.donate') }}">
+                            <script src="https://js.paystack.co/v1/inline.js"></script>
+                            <div class="col-md pb-4 text-center">
+                             <h5 style="color: #32be8f;">DONATION</h5>
+                             <h6>Your donations means a lot to us!</h6>
+                            </div>
+        
+                            <div class="form-row">
+                                <div class="form-group col-md">
+                                    <label for="donator-email"><p>Email Address*</p></label>
+                                    <input name="donator-email" type="email" class="form-control" id="donator-email" required>
+                                </div>
+                            </div>
+     
+                            <div class="form-row">
+                             <div class="form-group col-md">
+                                 <label for="donator-username"><p>Username</p></label>
+                                 <input name="donator-username" type="text" class="form-control" id="donator-username">
+                             </div>
+                         </div>
+     
+                         <div class="form-row">
+                             <div class="form-group col-md">
+                                 <label for="donate-amount"><p>Amount*</p></label>
+                                 <input name="donate-amount" type="number" class="form-control" id="donate-amount" required>
+                             </div>
+                         </div>
 
-                          <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" id="customRadioInline3" name="customRadioInline1" class="custom-control-input">
-                            <label class="custom-control-label" for="customRadioInline3">#100,000</label>
-                          </div>
+                         <div class="form-row mb-2">
+                            <div class="col-md">
+                                <label for="donate-phonenumber"><p>Phone number</p></label>
+                                <div class="input-group mb-2">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">+234</div>
+                                </div>
+                                <input type="number" name="donate-phonenumber" class="form-control" id="donate-phonenumber" maxlength="10" minlength="10">
+                                </div>
+                            </div>
                         </div>
 
                         <div class="form-group">
-                            <label for="amount">or other amount</label>
-                            <input type="number" class="form-control" id="amount" placeholder="Amount in NAIRA">
+                            <label for="donator-note"><p>Additional notes</p></label>
+                            <textarea class="form-control" id="donator-note" rows="3" placeholder="note: this will be displayed on our homepage!"></textarea>
+                          </div>
+
+                        <div class="col-md mt-3">
+                            <div class="col">
+                               <!--<button class="btn" type="button" onclick="payWithPaystack()"> Donate Now </button> --> 
+                               <button class="btn" type="button" onclick=""> Donate Now </button> 
+                            </div>  
                         </div>
-                    </div>
 
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="firstname">Firstname*</label>
-                        <input type="text" class="form-control" id="name" required>
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="lastname">Lastname</label>
-                        <input type="text" class="form-control" id="lastname">
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="email">Email*</label>
-                        <input type="email" class="form-control" id="email" required>
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="phone">Phone</label>
-                        <input type="number" class="form-control" id="phone">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="addtext">Additional notes</label>
-                    <textarea class="form-control" id="addtext" rows="3" placeholder="note: this will be displayed on our home page!"></textarea>
-                </div>
-                <div class="form-group row">
-                    <div class="col-sm-10">
-                      <button type="submit" class="stunning-item-button greennature-button large greennature-lb-payment">Donate Now</button>
-                    </div>
-                </div>
-            </form>
+                        <div id="secured" class="col text-center mt-5">
+                            <p><i class="fa fa-lock"></i> SECURED</p>
+                        </div>
+        
+                        </form>
+     
+                        </div>
+                   </div>
+               </div>
+   
+          
         </div>
+
     </section>
+    <!--end donate form-->
 
-    {{ render_contactus(render) }}
 
-    {{ render_footer(render) }}
+    <script>
+        function payWithPaystack(){
+          var handler = PaystackPop.setup({
+            key: 'pk_test_e13e729eec9612428bbdaeb9c80f2e1fb03d0dcf',
+            email: document.getElementById('donator-email').value,
+            amount: document.getElementById('donate-amount').value,
+            currency: "NGN",
+            ref: ''+Math.floor((Math.random() * 1000000000) + 1), // generates a pseudo-unique reference. Please replace with a reference you generated. Or remove the line entirely so our API will generate one for you
+            metadata: {
+               custom_fields: [
+                  {
+                      display_name: "Mobile Number",
+                      variable_name: "mobile_number",
+                      value: document.getElementById('donate-phonenumber').value,
+                  }
+               ]
+            },
+      
+            callback: function(response){
+                var donatorinfo = { 
+                    Donator : document.getElementById('donator-email').value, 
+                    Amount : document.getElementById('donate-amount').value 
+                };
+                console.log(donatorinfo); 
+                alert('Donation Successful. your transaction reference is ' + response.reference);
+            },
+    
+            onClose: function(){ 
+                alert('Payment Cancelled!');
+            }
+          });
+    
+          handler.openIframe();
+        }
+      </script>
+
 
     {{ render_js(render) }}
+
+
+</body>
 </body>
 
 </html>
