--- a/src/templates/donate.html
+++ b/src/templates/donate.html
@@ -13,10 +13,11 @@
     <title>Donate</title>
     {% endif %}
 
-        <!--paystack function-->
-
-
     {{ render_css(render) }}
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+
+   
 </head>
 
 
@@ -24,6 +25,7 @@
 <body class="donate-body">
     <!--Donation Form-->
     <section id="donate">
+      
         <div class="container">
             <div class="container h-100 p-5">
                 <div class="row align-items-center text-center h-100">
@@ -64,11 +66,37 @@
 
                    <div class="col-md">
                     <div class="card p-5 mb-5">
-                        <form id="register-form" method="POST" action="{{ url_for('main.donate') }}">
-                            <script src="https://js.paystack.co/v1/inline.js"></script>
+                        <form id="paymentForm" method="POST" action="{{ url_for('main.donate') }}" role="form">
+                            <script type="" src="https://js.paystack.co/v1/inline.js"></script>
                             <div class="col-md pb-4 text-center">
                              <h5 style="color: #32be8f;">DONATION</h5>
                              <h6>Your donations means a lot to us!</h6>
+                            </div>
+
+                            <div class="col">
+                                <div class="col-md p-1" id="flash_message">
+                                    {% with messages = get_flashed_messages(with_categories=true) %}
+                                    {% if messages %}
+                                        {% for category, message in messages %}
+                                        {% if category == 'success' %}
+                                        <div class="alert alert-success" role="alert">
+                                            {{ message }}!
+                                        </div>
+                                        {% endif %}
+                                        {% endfor %}
+                                    {% endif %}
+                                    
+                                    {% if messages %}
+                                        {% for category, message in messages %}
+                                        {% if category == 'error' %}
+                                        <div class="alert alert-danger" role="alert">
+                                            Error:  {{ message }}!
+                                        </div>
+                                        {% endif %}
+                                        {% endfor %}
+                                    {% endif %}
+                                    {% endwith %}
+                                </div>
                             </div>
         
                             <div class="form-row">
@@ -80,8 +108,8 @@
      
                             <div class="form-row">
                              <div class="form-group col-md">
-                                 <label for="donator-username"><p>Username</p></label>
-                                 <input name="donator-username" type="text" class="form-control" id="donator-username">
+                                 <label for="donator-name"><p>Name</p></label>
+                                 <input name="donator-name" type="text" class="form-control" id="donator-name" required>
                              </div>
                          </div>
      
@@ -111,9 +139,7 @@
 
                         <div class="col-md mt-3">
                             <div class="col">
-                               <!--<button class="btn" type="button" onclick="payWithPaystack()"> Donate Now </button> --> 
-                               <button class="btn" type="button" onclick=""> Donate Now </button> 
-                            </div>  
+                                <button class="btn" type="submit" onclick="payWithPaystack()"> Donate Now </button>                             </div>  
                         </div>
 
                         <div id="secured" class="col text-center mt-5">
@@ -124,56 +150,68 @@
      
                         </div>
                    </div>
-               </div>
-   
-          
+               </div>        
         </div>
 
     </section>
     <!--end donate form-->
-
+      
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js">
+    </script>
 
     <script>
-        function payWithPaystack(){
-          var handler = PaystackPop.setup({
-            key: 'pk_test_e13e729eec9612428bbdaeb9c80f2e1fb03d0dcf',
-            email: document.getElementById('donator-email').value,
-            amount: document.getElementById('donate-amount').value,
-            currency: "NGN",
-            ref: ''+Math.floor((Math.random() * 1000000000) + 1), // generates a pseudo-unique reference. Please replace with a reference you generated. Or remove the line entirely so our API will generate one for you
-            metadata: {
-               custom_fields: [
-                  {
-                      display_name: "Mobile Number",
-                      variable_name: "mobile_number",
-                      value: document.getElementById('donate-phonenumber').value,
-                  }
-               ]
-            },
-      
-            callback: function(response){
-                var donatorinfo = { 
-                    Donator : document.getElementById('donator-email').value, 
-                    Amount : document.getElementById('donate-amount').value 
-                };
-                console.log(donatorinfo); 
-                alert('Donation Successful. your transaction reference is ' + response.reference);
-            },
-    
-            onClose: function(){ 
-                alert('Payment Cancelled!');
-            }
-          });
-    
-          handler.openIframe();
-        }
-      </script>
+        const element = document.querySelector('form');
+        element.addEventListener('submit', event => {
+        event.preventDefault();
+        // actual logic, e.g. validate the form
+        console.log('Form submission cancelled.');
+        });
+    </script>
+
+    <script>
+        var paymentForm = document.getElementById('paymentForm');
+        paymentForm.addEventListener("submit", payWithPaystack, false);
+        
+                function payWithPaystack(){
+                  var handler = PaystackPop.setup({
+                    key: 'pk_test_e13e729eec9612428bbdaeb9c80f2e1fb03d0dcf',
+                    email: document.getElementById('donator-email').value,
+                    amount: document.getElementById('donate-amount').value * 100,
+                    currency: "NGN",
+                    ref: ''+Math.floor((Math.random() * 1000000000) + 1), // generates a pseudo-unique reference. Please replace with a reference you generated. Or remove the line entirely so our API will generate one for you
+                    metadata: {
+                       custom_fields: [
+                          {
+                              display_name: "Mobile Number",
+                              variable_name: "mobile_number",
+                              value: document.getElementById('donate-phonenumber').value,
+                          }
+                       ]
+                    },
+              
+              
+                   //Paystack inline callback function
+                    // Using Ajax to verify the transaction
+                    callback: function(response){
+                    $.ajax({
+                        url: '/donated',  
+                        dataType: 'json',                  
+                        data: $('form').serialize(),
+                        type: 'POST',
+                        success: function (response) {
+
+                        }
+                    });
+                    },
 
 
-    {{ render_js(render) }}
-
-
-</body>
+                    onClose: function(){
+                        alert('Payment Cancelled');
+                    }
+                  });
+                  handler.openIframe();
+                }
+    </script>
 </body>
 
 </html>
