--- a/src/templates/users.html
+++ b/src/templates/users.html
@@ -71,6 +71,12 @@
                     <div class="col-md-3">
                         <h4 class="list-group-item-heading">{{ user.profilepic }}</h4>
                     </div>
+
+                    <div class="col-md-3">
+                        <h4 class="list-group-item-heading">Donated: {{ donated.donate_amount }}</h4>
+                    </div>
+
+                   
                 </a>
                 {% endfor %}
             </div>
