--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -105,6 +105,8 @@
 
 <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css"/>
 
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C700%2C700italic%2C900%2C900italic&amp;subset=latin&amp;' type='text/css' media='all' />
 
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Noto+Sans%3Aregular%2Citalic%2C700%2C700italic&amp;subset=greek%2Ccyrillic-ext%2Ccyrillic%2Clatin%2Clatin-ext%2Cvietnamese%2Cgreek-ext&amp;' type='text/css' media='all' />
@@ -162,15 +164,26 @@
                 <div class="greennature-item greennature-about-us-item greennature-normal">
                     <div class="about-us-title-wrapper">
                         <h3 class="about-us-title">ABOUT US</h3>
-                        <div class="about-us-caption greennature-title-font greennature-skin-info">what is Donate A Seed?</div>
+                        <div class="about-us-caption greennature-title-font greennature-skin-info">what is DONATE A SEED&trade;?</div>
                         <div class="about-us-title-divider"></div>
                     </div>
                     <div class="about-us-content-wrapper">
                         <div class="about-us-content greennature-skin-content">
-                            <p>An initiative / Platform led by sgd developers with a goal to seek for seeds
+                            <p>An initiative Platform led by SDG developers with a goal to seek for seeds
                                 for farmers for plantation in the aim to end zero hunger on the less privileged
-                                ones during this pandemic time and beyond. </p>
-                        </div><a class="about-us-read-more greennature-button" href="#contact-us">Learn More &raquo;</a>
+                                ones during this pandemic time and beyond. 
+                            </p>
+                            <br>
+                            <div class="about-us-caption greennature-title-font greennature-skin-info">How does it work?</div>
+                            <p>When you a register as Farmer, you will receive aids from us by providing you Good Seeds, Assistance in starting up a farm and Improving your already built business, At the end of the harvest we then take 10% of the profit made use and it to provide food for the less priviledged ones.</p>
+                            
+                            <p>One can also register as a Seed Deliverer to help deliver seeds or resources to Farmers In need of them, after Successful delivery you get a compensation.</p>
+                            <div class="about-us-caption greennature-title-font greennature-skin-info">How will we make this happen?</div>
+                            <p>Our main source of income is through Donations from kind hearted individuals who also want Hunger to end across Africa.</p>
+                            <p>For more information feel free to <a href="#contact-us">contact us</a></p>
+
+                        </div>
+                        <a class="about-us-read-more greennature-button" href="#contact-us">Learn More &raquo;</a>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -224,7 +237,7 @@
                                 <div class="greennature-ux greennature-classic-portfolio-ux">
                                     <div class="portfolio-thumbnail greennature-image"><img src="../static/images/dem-dey.jpg" alt="" width="540" height="326" /><span class="portfolio-overlay">&nbsp;</span></div>
                                     <div class="portfolio-classic-content">
-                                        <h3 class="portfolio-title"><a href="#">New Improved Seeds</a></h3>
+                                        <h3 class="portfolio-title"><a href="#">Provide New Improved Seeds</a></h3>
 
                                         <div class="portfolio-excerpt">By 2020, maintain the genetic diversity of seeds, cultivated plants and farmed and domesticated animals and their related wild species, including through soundly managed and diversified seed and plant banks at the national, regional and international levels, and promote access to and fair and equitable sharing of benefits arising from the utilization of genetic resources and associated traditional knowledge, as internationally agreed...
                                             <div class="clear"></div><a href="#" class="excerpt-read-more">Read More</a></div><a class="portfolio-classic-learn-more" href="#">Learn More</a>
